corrected wrong margin

--- a/assets/styles/article/_redesign.scss
+++ b/assets/styles/article/_redesign.scss
@@ -68,7 +68,7 @@
     }
 
     .mt-lg-87 {
-      margin-top: 86px;
+      margin-top: 87px;
     }
 
     .mt-lg-39 {
